fixed some responsive nav issues and text wrapping

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -81,6 +81,7 @@ p{
       font-size: 1.8rem;
       margin: 0 1.5em;
       text-decoration: none;
+      white-space: nowrap;
     }
     &-link:hover {
       color : $secondaryWhite;
@@ -496,21 +497,6 @@ p{
 }
 
 @media screen and (min-width: 768px) {
-  .header{
-
-    &__navigation {
-      display: flex;
-      flex: 1;
-      justify-content: flex-end;
-      align-items: flex-end;
-    }
-
-    &__lang-switcher{
-      &__separator{
-        border-right : 2px solid #fff;
-      }
-    }
-  }
   .hero {
     
     &__image {
@@ -653,6 +639,22 @@ p{
 }
 
 @media screen and (min-width: 1024px) {
+
+  .header{
+
+    &__navigation {
+      display: flex;
+      flex: 1;
+      justify-content: flex-end;
+      align-items: flex-end;
+    }
+
+    &__lang-switcher{
+      &__separator{
+        border-right : 2px solid #fff;
+      }
+    }
+  }
 
   .contact {
 
